--- a/src/Server/Pages/Features/Identity/Profile.cshtml
+++ b/src/Server/Pages/Features/Identity/Profile.cshtml
@@ -41,7 +41,7 @@
 <div class="row">
 	<div class="col-md-3">
 
-		@if (string.IsNullOrWhiteSpace(value: Model.ViewModel.WideImageUrl) == false)
+		@if (string.IsNullOrWhiteSpace(value: Model.ViewModel.ImageUrl) == false)
 		{
 			<div class="row p-3">
 				<div class="col">
