--- a/src/Server/Pages/Features/Cms/Category.cshtml
+++ b/src/Server/Pages/Features/Cms/Category.cshtml
@@ -8,45 +8,14 @@
 @{
 	ViewData[Constants.ViewDataKeyName.PageTitle] = Model.ViewModel.Title;
 	ViewData[Constants.ViewDataKeyName.PageDescription] = Model.ViewModel.Description;
-}
 
-@(Html.Raw(Model.ViewModel.Body))
-
-@{
-	var currentUICultureLcid = Domain.Features
-		.Common.CultureEnumHelper.GetCurrentUICultureLcid();
-
-	// TODO -> Convert To ViewModel for Better Performance
-	var posts =
-		DatabaseContext.Posts
-
-		.Where(current => current.Culture != null &&
-			current.Culture.Lcid == currentUICultureLcid)
-
-		.Where(current => current.CategoryId == Model.ViewModel.Id)
-
-		.Where(current => current.IsActive)
-		.Where(current => current.IsDraft == false)
-		.Where(current => current.IsDeleted == false)
-
-		.Where(current => current.Category != null && current.Category.IsActive)
-
-		//.Where(current => current.User != null && current.User.IsActive)
-
-		.Where(current => current.User != null && current.User.IsDeleted == false)
-
-		.OrderByDescending(current => current.IsFeatured)
-		.ThenByDescending(current => current.UpdateDateTime)
-
-		.Skip(count: 0)
-		.Take(count: Model.ViewModel.MaxDisplayPostCount)
-
-		.ToList();
+	Layout =
+		"Layouts/_DefaultWithoutTopMargin";
 }
 
 @if (string.IsNullOrWhiteSpace(value: Model.ViewModel.WideImageUrl) == false)
 {
-	<div class="row mb-3">
+	<div class="row">
 		<div class="col">
 			<img src="@(Model.ViewModel.WideImageUrl)" alt="@(Model.ViewModel.Title)" class="img-fluid">
 		</div>
@@ -55,56 +24,13 @@
 
 @if (string.IsNullOrWhiteSpace(value: Model.ViewModel.Body) == false)
 {
-	<div class="row mb-3">
+	<div class="row mt-3">
 		<div class="col">
 			@(Html.Raw(Model.ViewModel.Body))
 		</div>
 	</div>
 }
 
-@{
-	if (posts.Count == 0)
-	{
-		return;
-	}
-
-	var currentUICultureName = Domain.Features
-		.Common.CultureEnumHelper.GetCurrentUICultureName();
-}
-
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
-
-	@for (var index = 0; index <= posts.Count - 1; index++)
-	{
-		var post = posts[index];
-
-		var textBackground = "text-bg-light";
-		if (post.IsFeatured)
-		{
-			textBackground = "text-bg-warning";
-		}
-
-		<div class="col">
-			<div class="card @(textBackground) h-100">
-				<img src="@(post.ImageUrl)" class="card-img-top" alt="@(post.Title)">
-
-				<div class="card-body">
-					<h5 class="card-title">
-						@(post.Title)
-					</h5>
-
-					<p class="card-text">
-						@(post.Description)
-					</p>
-				</div>
-
-				<div class="card-footer d-grid">
-					<a href="/post/@(currentUICultureName)/@(post.Id)" class="btn btn-sm btn-primary">
-						@(Resources.DataDictionary.Watch)
-					</a>
-				</div>
-			</div>
-		</div>
-	}
-
+<div class="mt-3">
+	<partial name="Features/Cms/PartialViews/_DisplayPostsByCategoryId" model="Model.ViewModel.Id" />
 </div>
