--- a/src/Server/Pages/Features/Identity/Profile.cshtml
+++ b/src/Server/Pages/Features/Identity/Profile.cshtml
@@ -2,8 +2,7 @@
 
 @model Server.Pages.Features.Identity.ProfileModel
 
-@section StyleSheets
-	{
+@section StyleSheets {
 	<style>
 		body {
 			color: antiquewhite;
@@ -61,6 +60,11 @@
 
 		<h3 class="text-center">
 			@(fullName)
+
+			@if (Model.ViewModel.IsVerified)
+			{
+				<i class="bi bi-star-fill text-warning" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="@(Resources.DataDictionary.IsVerified)"></i>
+			}
 		</h3>
 
 		<h5 class="mt-5">
@@ -93,12 +97,19 @@
 
 				@if (Model.ViewModel.IsEmailAddressVerified)
 				{
-					<text>(</text>
-
-					@(Resources.DataDictionary.IsVerified)
-
-					<text>)</text>
+					<i class="bi bi-star-fill text-warning" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="@(Resources.DataDictionary.IsVerified)"></i>
 				}
+
+				@*
+				@if (Model.ViewModel.IsEmailAddressVerified)
+				{
+				<text>(</text>
+
+				@(Resources.DataDictionary.IsVerified)
+
+				<text>)</text>
+				}
+				*@
 
 				<br />
 				<div class="mt-1" dir="ltr">
@@ -116,13 +127,20 @@
 				<div class="col">
 					@(Resources.DataDictionary.CellPhoneNumber)
 
+					@*
+				@if (Model.ViewModel.IsCellPhoneNumberVerified)
+				{
+				<text>(</text>
+
+				@(Resources.DataDictionary.IsVerified)
+
+				<text>)</text>
+				}
+				*@
+
 					@if (Model.ViewModel.IsCellPhoneNumberVerified)
 					{
-						<text>(</text>
-
-						@(Resources.DataDictionary.IsVerified)
-
-						<text>)</text>
+						<i class="bi bi-star-fill text-warning" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="@(Resources.DataDictionary.IsVerified)"></i>
 					}
 
 					<br />
@@ -192,18 +210,24 @@
 
 	</div>
 
-	<div class="col-md-9 bg-light">
+	<div class="col-md-9 bg-light text-black p-3">
 
 		@if (string.IsNullOrWhiteSpace(value: Model.ViewModel.Description) == false)
 		{
-			<h3>
-				@(Resources.DataDictionary.AboutMe)
-			</h3>
+			@*
+		<h3 class="mt-3">
+		@(Resources.DataDictionary.AboutMe)
+		</h3>
 
-			<hr />
+		<hr />
+		*@
 
 			@(Html.Raw(Model.ViewModel.Description))
 		}
 
 	</div>
+</div>
+
+<div class="mt-3">
+	<partial name="Features/Cms/PartialViews/_DisplayPostsInHomePage" model="Model.ViewModel.Id" />
 </div>
