--- a/src/Server/Pages/Shared/PartialViews/_Scripts.cshtml
+++ b/src/Server/Pages/Shared/PartialViews/_Scripts.cshtml
@@ -1,8 +1,7 @@
 ﻿<environment include="Development" exclude="Production">
 
-	@*
-	<script src="~/lib/bootstrap/js/bootstrap.js" asp-append-version="true"></script>
-	*@
+	<script src="https://unpkg.com/@@popperjs/core@2"></script>
+	@*<script src="~/lib/popper.js/cjs/popper.js" true"></script>*@
 
 	<script src="~/lib/bootstrap/js/bootstrap.bundle.js" asp-append-version="true"></script>
 
@@ -18,9 +17,8 @@
 
 <environment include="Production" exclude="Development">
 
-	@*
-	<script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
-	*@
+	<script src="https://unpkg.com/@@popperjs/core@2"></script>
+	@*<script src="~/lib/popper.js/cjs/popper.min.js" true"></script>*@
 
 	<script src="~/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
 
@@ -34,6 +32,12 @@
 
 </environment>
 
+<script>
+	var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+	var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+		return new bootstrap.Tooltip(tooltipTriggerEl)
+	})
+</script>
 
 <script src="~/js/site.js" asp-append-version="true"></script>
 
