--- a/src/Server/Pages/Account/UpdateProfile.cshtml
+++ b/src/Server/Pages/Account/UpdateProfile.cshtml
@@ -35,7 +35,7 @@
 
 			<dtat-full-input asp-for="ViewModel.ImageUrl" dir="ltr" />
 
-			<dtat-full-input asp-for="ViewModel.WideImageUrl" dir="ltr" />
+			<dtat-full-input asp-for="ViewModel.CoverImageUrl" dir="ltr" />
 
 			<dtat-full-textarea asp-for="ViewModel.Description" />
 		</fieldset>
