--- a/src/Server/Pages/Features/Cms/Admin/PostCategories/Create.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/PostCategories/Create.cshtml
@@ -30,7 +30,7 @@
 
 			<dtat-full-input asp-for="ViewModel.ImageUrl" dir="ltr" />
 
-			<dtat-full-input asp-for="ViewModel.WideImageUrl" dir="ltr" />
+			<dtat-full-input asp-for="ViewModel.CoverImageUrl" dir="ltr" />
 
 			<dtat-full-checkbox asp-for="ViewModel.DisplayInHomePage" />
 
