--- a/src/Server/Pages/Features/Cms/Admin/PostCategories/Details.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/PostCategories/Details.cshtml
@@ -30,7 +30,7 @@
 
 		<dtat-readonly-input asp-for="ViewModel.ImageUrl" />
 
-		<dtat-readonly-input asp-for="ViewModel.WideImageUrl" />
+		<dtat-readonly-input asp-for="ViewModel.CoverImageUrl" />
 
 		<dtat-readonly-checkbox asp-for="ViewModel.DisplayInHomePage" />
 
