--- a/src/Server/Pages/Features/Cms/Admin/PostCategories/Create.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/PostCategories/Create.cshtml
@@ -32,9 +32,11 @@
 
 			<dtat-full-input asp-for="ViewModel.CoverImageUrl" dir="ltr" />
 
+			<dtat-full-input asp-for="ViewModel.MaxPostCountInMainPage" />
+
 			<dtat-full-checkbox asp-for="ViewModel.DisplayInHomePage" />
 
-			<dtat-full-input asp-for="ViewModel.MaxDisplayPostCount" />
+			<dtat-full-input asp-for="ViewModel.MaxPostCountInHomePage" />
 
 			<dtat-full-input asp-for="ViewModel.Hits" />
 
