--- a/src/Server/Pages/Features/Cms/Admin/PostCategories/Details.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/PostCategories/Details.cshtml
@@ -32,9 +32,11 @@
 
 		<dtat-readonly-input asp-for="ViewModel.CoverImageUrl" />
 
+		<dtat-readonly-input asp-for="ViewModel.MaxPostCountInMainPage" />
+
 		<dtat-readonly-checkbox asp-for="ViewModel.DisplayInHomePage" />
 
-		<dtat-readonly-input asp-for="ViewModel.MaxDisplayPostCount" />
+		<dtat-readonly-input asp-for="ViewModel.MaxPostCountInHomePage" />
 
 		<dtat-readonly-input asp-for="ViewModel.PostCount" />
 
