--- a/src/Server/Pages/Features/Cms/Admin/Posts/Update.cshtml
+++ b/src/Server/Pages/Features/Cms/Admin/Posts/Update.cshtml
@@ -48,6 +48,8 @@
 
 			<dtat-full-input asp-for="ViewModel.ImageUrl" dir="ltr" />
 
+			<dtat-full-input asp-for="ViewModel.CoverImageUrl" dir="ltr" />
+
 			<dtat-full-textarea asp-for="ViewModel.Introduction" />
 
 			<dtat-full-textarea asp-for="ViewModel.Body" />
