--- a/src/Server/Pages/Features/Cms/PartialViews/_DisplayPostsByCategoryId.cshtml
+++ b/src/Server/Pages/Features/Cms/PartialViews/_DisplayPostsByCategoryId.cshtml
@@ -5,7 +5,7 @@
 @using Microsoft.EntityFrameworkCore
 
 @{
-	if(Model is null)
+	if (Model is null)
 	{
 		return;
 	}
@@ -34,18 +34,20 @@
 		.Where(current => current.IsDraft == false)
 		.Where(current => current.IsDeleted == false)
 
-		// TODO
-		//.Where(current => current.Type != null && current.Type.IsActive)
-		.Where(current => current.Category != null && current.Category.IsActive)
+		.Where(current => current.Type!.IsActive)
+		.Where(current => current.Category!.IsActive)
 
-		.Where(current => current.User != null && current.User.IsActive)
-		.Where(current => current.User != null && current.User.IsDeleted == false)
-		.Where(current => current.User != null && current.User.IsEmailAddressVerified)
+		.Where(current => current.User!.IsDeleted == false)
+
+		// فکر می‌کنم که به دو دستور ذیل نیازی نیست 
+		//.Where(current => current.User!.IsActive)
+		//.Where(current => current.User!.IsEmailAddressVerified)
 
 		.OrderByDescending(current => current.IsFeatured)
 		.ThenByDescending(current => current.UpdateDateTime)
 
-		.Select(current => new ViewModels.Pages.Features.Cms.PartialViews.DisplayPostCardViewModel
+		.Select(current => new ViewModels.Pages
+			.Features.Cms.PartialViews.DisplayPostCardViewModel
 				{
 					//TextBackground
 
@@ -58,7 +60,7 @@
 					Description = current.Description,
 
 					Username = current.User!.Username,
- 
+
 					DisplayAuthor = false,
 					Author = current.Author,
 
