--- a/src/Server/Pages/Features/Cms/PartialViews/_DisplayPostsInHomePage.cshtml
+++ b/src/Server/Pages/Features/Cms/PartialViews/_DisplayPostsInHomePage.cshtml
@@ -26,25 +26,22 @@
 		.Where(current => current.IsDraft == false)
 		.Where(current => current.IsDeleted == false)
 
-		// TODO
-		//.Where(current => current.Type != null && current.Type.IsActive)
-		.Where(current => current.Category != null && current.Category.IsActive)
+		.Where(current => current.Type!.IsActive)
+		.Where(current => current.Category!.IsActive)
 
-		.Where(current => current.User != null && current.User.IsActive)
-		.Where(current => current.User != null && current.User.IsDeleted == false)
-		.Where(current => current.User != null && current.User.IsEmailAddressVerified)
+		.Where(current => current.User!.IsDeleted == false)
+
+		// فکر می‌کنم که به دو دستور ذیل نیازی نیست
+		//.Where(current => current.User!.IsActive)
+		//.Where(current => current.User!.IsEmailAddressVerified)
 
 		.OrderByDescending(current => current.IsFeatured)
 		.ThenByDescending(current => current.UpdateDateTime)
 
-		.Select(current => new ViewModels.Pages.Features.Cms.PartialViews.DisplayPostCardViewModel
+		.Select(current => new ViewModels.Pages
+			.Features.Cms.PartialViews.DisplayPostCardViewModel
 				{
 					//TextBackground
-
-					// TODO
-					//TypeName,
-					//TypeTitle
-					//DisplayTypeLink
 
 					Id = current.Id,
 					Hits = current.Hits,
@@ -58,6 +55,10 @@
 
 					DisplayAuthor = true,
 					Author = current.Author,
+
+					DisplayTypeLink = true,
+					TypeName = current.Type!.Name,
+					TypeTitle = current.Type!.Title,
 
 					DisplayCategoryLink = true,
 					CategoryName = current.Category!.Name,
