--- a/src/Server/Pages/Features/Cms/PartialViews/_Navbar.cshtml
+++ b/src/Server/Pages/Features/Cms/PartialViews/_Navbar.cshtml
@@ -39,6 +39,12 @@
 		</li>
 
 		<li>
+			<a class="dropdown-item" asp-page="/Features/Cms/Admin/PostTypes/Index">
+				@(Resources.DataDictionary.PostTypes)
+			</a>
+		</li>
+
+		<li>
 			<a class="dropdown-item" asp-page="/Features/Cms/Admin/PostCategories/Index">
 				@(Resources.DataDictionary.PostCategories)
 			</a>
