--- a/src/Server/Pages/Features/Common/Admin/ApplicationSettings/Update.cshtml
+++ b/src/Server/Pages/Features/Common/Admin/ApplicationSettings/Update.cshtml
@@ -45,6 +45,8 @@
 
 			<dtat-full-checkbox asp-for="ViewModel.IsSslEnabled" />
 
+			<dtat-full-checkbox asp-for="ViewModel.IsGoogleSsoEnabled" />
+
 		</fieldset>
 
 		<section-form-buttons>
