--- a/src/Server/Pages/Shared/Layouts/_Default.cshtml
+++ b/src/Server/Pages/Shared/Layouts/_Default.cshtml
@@ -39,7 +39,7 @@
 	<partial name="PartialViews/Navbars/_NavbarDynamic" />
 	<partial name="PartialViews/Navbars/_NavbarAuthorized" />
 
-	<main class="mt-3 mb-5 pb-5">
+	<main class="mb-5 pb-5">
 		<div class="container">
 			@(RenderBody())
 		</div>
