--- a/src/Server/Pages/Features/Identity/PartialViews/_Navbar.cshtml
+++ b/src/Server/Pages/Features/Identity/PartialViews/_Navbar.cshtml
@@ -50,6 +50,12 @@
 			</a>
 		</li>
 
+		<li>
+			<a class="dropdown-item" asp-page="/Account/LoginLogs">
+				@(Resources.DataDictionary.LoginLogs)
+			</a>
+		</li>
+
 	</ul>
 
 </li>
